package eapli.base.eventmanagement.domain;

public enum ParticipationMeetingStatus {

    CREATED,

    INVITED,

    ACCEPTED,

    REFUSED,

    CANCELED
}
